--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,7 @@
 
         .container {
             width: 50%;
-            /* Adjusts the width of the container */
             margin: 0 auto;
-            /* Centers the container */
             padding: 20px;
         }
 
@@ -48,14 +46,14 @@
             padding: 8px;
             margin: 6px 0 10px 0;
             display: inline-block;
-            border: 1px solid #ccc;
+            border: 1px solid #aaa;
             border-radius: 4px;
             box-sizing: border-box;
         }
 
         button {
             width: 100%;
-            background-color: #4CAF50;
+            background-color: #007bff;
             color: white;
             padding: 14px 20px;
             margin: 8px 0;
@@ -65,7 +63,7 @@
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #0069d9;
         }
 
         ul {
@@ -75,7 +73,7 @@
 
         li {
             padding: 8px;
-            background: white;
+            background: f9f9f9;
             border-bottom: 1px solid #ddd;
         }
 
